# newlib-influx

./: config.sub
newlib/: configure.host
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/autom4te.cache/: output.0  requests  traces.0
newlib/libc/sys/influx/: Makefile.am  Makefile.in  crt0.c  dup.c  dup2.c  fcntl.c  getcwd.c  kernel_sigaction.h  kill.c  open.c  sigaction.c  signal.c  syscall.h  syscalls.c  ttyname.c  wait.c
newlib/libc/sys/influx/autom4te.cache/: output.1  requests  traces.0  traces.1
newlib/libc/sys/influx/bits/: dirent.h
newlib/libc/sys/influx/sys/: _sigset.h  dirent.h  signal.h  types.h
